clearing three
