# gestioncours/spring-server/src/main/resources/api-spec.yaml
@@ -116,16 +116,10 @@ paths:
                   $ref: '#/components/schemas/EnrollmentList'
         '401':
           description: unexpected error
-
   /enrollments/{id}:
-
     get:
       description: Returns an enrollment based on a single ID
-<<<<<<< HEAD
-      operationId: find enrollment by id
-=======
       operationId: get enrollment by id
->>>>>>> 63dd7b6021b3903ddab9bf1535649138ff826dc5
       parameters:
         - name: id
           in: path
@@ -142,10 +136,6 @@ paths:
                 $ref: '#/components/schemas/Enrollment'
         default:
           description: unexpected error
-<<<<<<< HEAD
-
-=======
->>>>>>> 63dd7b6021b3903ddab9bf1535649138ff826dc5
     delete:
       description: delete a single enrollment on the ID supplied
       operationId: deleteEnrollment
@@ -160,7 +150,6 @@ paths:
           description: enrollment deleted
         default:
           description: unexpected error
-
   /labos:
     post:
       operationId: createLabo
@@ -194,8 +183,6 @@ paths:
                   $ref: '#/components/schemas/Labo'
         '401':
           description: unexpected error
-
-
 components:
   schemas:
     Subject:
@@ -213,38 +200,16 @@ components:
           properties:
             id:
               type : integer
-              format: int64
-    User:
-      type: object
-      properties:
-        e_mail:
-          type: string
-        first_name:
-          type: string
-        last_name:
-          type: string
-        password:
-          type: string
-        user_role:
-          type: string
     Enrollment:
       type: object
       required:
         - subject_id
-<<<<<<< HEAD
-        - student_email
-=======
         - user_email
->>>>>>> 63dd7b6021b3903ddab9bf1535649138ff826dc5
       properties:
         subject_id:
           type: integer
           format: int64
-<<<<<<< HEAD
         student_email:
-=======
-        user_email:
->>>>>>> 63dd7b6021b3903ddab9bf1535649138ff826dc5
           type: string
     EnrollmentList:
       allOf:
